[package]
name = "personal-blog"
version = "0.1.0"
authors = ["David Lewis <davidlewis@icloud.com>"]

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"

env_logger = "*"
actix = "*"
actix-web = "*"

futures = "*"

diesel = { version = "*", features = ["chrono", "postgres"] }
r2d2 = "*"
r2d2-diesel = "*"

chrono = "*"
